[Python] [Document Versioning]
1. Implement a document versioning system in Python
    a. Bases itself on the uniqueness of the supplied document name - computes using the filename if not specified.
    b. Remembers unique IDs throughout the longevity of the python Parsr client object.
    c. Shows changes/diffs between all/any versions of a document (HTML or unix diff flavors).
2. Added demo to the jupyter notebook
3. Upgraded the jupyter notebook dependence to a jupyter lab dependence

--- a/demo/jupyter-notebook/Pipfile
+++ b/demo/jupyter-notebook/Pipfile
@@ -10,7 +10,7 @@ requests = "==2.22.0"
 pandas = "==0.25.3"
 ipython = "==7.9.0"
 Pygments = "==2.4.2"
-jupyter = "*"
+jupyterlab = "*"
 diff-match-patch = "*"
 
 [requires]
