--- a/demo/jupyter-notebook/Pipfile
+++ b/demo/jupyter-notebook/Pipfile
@@ -12,6 +12,7 @@ ipython = "==7.9.0"
 Pygments = "==2.4.2"
 jupyterlab = "*"
 diff-match-patch = "*"
+sxsdiff = "*"
 
 [requires]
 python_version = "3.7"
