--- a/api/server/package.json
+++ b/api/server/package.json
@@ -22,8 +22,7 @@
 		"multer": "^1.4.1",
 		"pdf2pic": "^1.3.9",
 		"pino": "^5.12.0",
-		"pino-pretty": "^2.6.0",
-		"sharp": "^0.23.3"
+		"pino-pretty": "^2.6.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.16.1",
