--- a/.drone.yml
+++ b/.drone.yml
@@ -55,7 +55,7 @@ steps:
   - chown -R 1001:0 /drone/src
 
 - name: Build API
-  image: axarev/parsr-base:$DRONE_BRANCH
+  image: axarev/parsr-base:${DRONE_BRANCH}
   environment:
     NODE_ENV: development
   commands:
@@ -87,6 +87,7 @@ steps:
       from_secret: registry_password
     build_args:
       DEV_MODE: 'true'
+      BASEIMAGE_VERSION: ${DRONE_BRANCH}
   when:
     event:
       exclude:
