--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "csv-stringify": "^5.3.3",
     "file-type": "^9.0.0",
     "html-entities": "^1.2.1",
+    "html-pdf": "^2.2.0",
     "limit-async": "^1.3.0",
+    "mailparser": "^2.7.7",
     "pdfjs-dist": "^2.2.228",
     "pino": "^5.13.2",
     "pino-pretty": "^2.6.1",
