[eml-input] - replaced "html -> pdf" library because of audit problems

--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
     "clone": "^2.1.2",
     "commander": "^2.20.0",
     "concaveman": "^1.1.1",
+    "convert-html-to-pdf": "^1.0.1",
     "copyfiles": "^2.1.1",
     "csv-stringify": "^5.3.3",
     "file-type": "^9.0.0",
     "html-entities": "^1.2.1",
-    "html-pdf": "^2.2.0",
     "limit-async": "^1.3.0",
     "mailparser": "^2.7.7",
     "pdfjs-dist": "^2.2.228",
