[docker-fix] - added puppeteer dependency

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "pdfjs-dist": "^2.2.228",
     "pino": "^5.13.2",
     "pino-pretty": "^2.6.1",
+    "puppeteer": "^2.0.0",
     "request": "^2.88.0",
     "string-similarity": "^1.2.1",
     "svgson": "^3.1.0",
