[vue-pagination] - font ratios are calculated only when the value is visible in the screen

--- a/demo/vue-viewer/package.json
+++ b/demo/vue-viewer/package.json
@@ -14,6 +14,7 @@
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-markdown": "^2.2.4",
+    "vue-observe-visibility": "^0.4.6",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.5",
     "vuex": "^3.0.1"
