--- a/.drone.yml
+++ b/.drone.yml
@@ -56,13 +56,14 @@ steps:
 
 - name: Build API
   image: axarev/parsr-base:${DRONE_BRANCH}
+  pull: always
   environment:
     NODE_ENV: development
   commands:
   - docker/parsr/build.sh
 
 - name: Tests
-  image: axarev/parsr-base
+  image: axarev/parsr-base:${DRONE_BRANCH}
   commands:
   - npm run test
 
