[header-footer-detection] - separated responsibilities from HeaderFooterDetection and PageNumberDetection modules
- removed all optional parameters from PageNumberDetectionModule
- now PageNumberDetectionModule only detects 'page number' texts using the previously calculated margins from HeaderFooterDetectionModule

--- a/server/configKeyValueSearch.json
+++ b/server/configKeyValueSearch.json
@@ -15,7 +15,7 @@
 		"link-detection",
 		["words-to-line", { "maximumSpaceBetweenWords": 100 }],
 		"lines-to-paragraph",
-		["page-number-detection", { "maxMarginPercentage": 15 }],
+		"page-number-detection",
 		"hierarchy-detection",
 		[
 			"key-value-detection",
