--- a/server/src/processing/PageNumberDetectionModule/defaultConfig.json
+++ b/server/src/processing/PageNumberDetectionModule/defaultConfig.json
@@ -1,16 +1,4 @@
 {
 	"name": "page-number-detection",
-	"description": "Detects the page number for each page in a document",
-	"specs": {
-		"ignorePages": {
-			"value": []
-		},
-		"maxMarginPercentage": {
-			"value": 30,
-			"range": {
-				"min": 0,
-				"max": 100
-			}
-		}
-	}
+	"description": "Detects the page number for each page in a document"
 }
