--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -1,9 +1,12 @@
 {
-  "version": 0.5,
+  "version": 0.8,
   "extractor": {
     "pdf": "pdfminer",
     "img": "tesseract",
-    "language": ["eng", "fra"]
+    "language": [
+      "eng",
+      "fra"
+    ]
   },
   "cleaner": [
     "out-of-page-removal",
@@ -66,6 +69,7 @@
     "list-detection",
     "page-number-detection",
     "hierarchy-detection",
+    "table-of-contents-detection",
     [
       "regex-matcher",
       {
