[TOC] - moved hardcoded keywords to module config

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -69,7 +69,25 @@
     "list-detection",
     "page-number-detection",
     "hierarchy-detection",
-    "table-of-contents-detection",
+    [
+      "table-of-contents-detection",
+      {
+        "keywords": [
+          "contents",
+          "index",
+          "table of contents",
+          "contenidos",
+          "indice",
+          "índice",
+          "tabla de contenidos"
+        ],
+        "pageKeywords": [
+          "pagina",
+          "page",
+          "pag"
+        ]
+      }
+    ],
     [
       "regex-matcher",
       {
