--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@google-cloud/vision": "^1.3.0",
     "an-array-of-english-words": "^1.3.1",
+    "archiver": "^3.1.1",
     "aws-sdk": "^2.605.0",
     "axios": "^0.19.0",
     "clone": "^2.1.2",
@@ -76,6 +77,7 @@
     "xmldom": "^0.1.27"
   },
   "devDependencies": {
+    "@types/archiver": "^3.0.0",
     "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.0",
     "@types/clone": "^0.1.30",
