[ocr-credentials] - credentials for OCR services are passed in the JSON config file instead of passing them as environment variables. Credential verification is executed in each extractor constructor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,11 +25,7 @@
         "-p"
       ],
       "env": {
-        "NODE_DEBUG": "pipeline",
-        "GOOGLE_APPLICATION_CREDENTIALS": "${workspaceRoot}/***.json",
-        "OCP_APIM_SUBSCRIPTION_KEY": "",
-        "AWS_ACCESS_KEY_ID": "",
-        "AWS_SECRET_ACCESS_KEY": "",
+        "NODE_DEBUG": "pipeline"
       },
       "outputCapture": "std"
     }
