--- a/demo/jupyter-notebook/sampleConfig.json
+++ b/demo/jupyter-notebook/sampleConfig.json
@@ -2,7 +2,7 @@
   "version": 0.5,
   "extractor": {
     "pdf": "pdfminer",
-    "img": "tesseract",
+    "ocr": "tesseract",
     "language": ["eng", "fra"]
   },
   "cleaner": [
