--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -2,7 +2,7 @@
   "version": 0.8,
   "extractor": {
     "pdf": "pdfminer",
-    "img": "tesseract",
+    "ocr": "tesseract",
     "language": [
       "eng",
       "fra"
