deleted logistic regression training

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -61,7 +61,7 @@
         "tolerance": 0.25
       }
     ],
-    "heading-detection",
+    "ml-heading-detection",
     "list-detection",
     "page-number-detection",
     "hierarchy-detection",
