--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "limit-async": "^1.3.0",
     "mailparser": "^2.7.7",
     "pdfjs-dist": "^2.2.228",
+    "pdfmerge": "^1.0.2",
     "pino": "^5.13.2",
     "pino-pretty": "^2.6.1",
     "request": "^2.88.0",
