--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.projectKey=axa-group/Parsr
-sonar.projectName=axa-group/Parsr
-#sonar.javascript.lcov.reportPaths=./server/.coverage/lcov-report
+sonar.projectKey=parsr
+sonar.projectName=Parsr
+slack_webhook=https://hooks.slack.com/services/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
