--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "html-entities": "^1.2.1",
     "limit-async": "^1.3.0",
     "mailparser": "^2.7.7",
-    "pdfjs-dist": "^2.3.200",
+    "pdfjs-dist": "2.3.200",
     "pdfmerge": "^1.0.2",
     "pino": "^5.17.0",
     "pino-pretty": "^2.6.1",
