--- a/package.json
+++ b/package.json
@@ -34,21 +34,12 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
+      "pre-commit": "lint-staged",
       "pre-push": "npm test && npm audit && npm run remark"
     }
   },
   "lint-staged": {
-    "linters": {
-      "{,!(dist)/**/}*.{js,md,ts,css,scss}": [
-        "npm run format",
-        "git add"
-      ],
-      "{,!(dist|-viewer/public)/**/}*.{ts}": [
-        "tslint --fix",
-        "git add"
-      ]
-    }
+    "!(dist|-viewer/public)/**/*.ts": "tslint"
   },
   "dependencies": {
     "@google-cloud/vision": "1.11.0",
