--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
     "svgson": "^3.1.0",
     "tslint": "^5.19.0",
     "xml-stream": "^0.4.5",
-    "xml2js": "^0.4.23",
-    "xmldom": "^0.1.31"
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/archiver": "^3.1.0",
