Add a simple JSON output that is easier to use. Use the simpleJSON:true in config to get it1

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -106,7 +106,8 @@
       "text": true,
       "csv": true,
       "markdown": true,
-      "pdf": false
+      "pdf": false,
+      "simpleJson" : true
     }
   }
 }
