python client packaging + jupyter notebook adapt

--- a/demo/parsr-jupyter-demo/Pipfile
+++ b/demo/parsr-jupyter-demo/Pipfile
@@ -6,10 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-requests = "==2.22.0"
-pandas = "==0.25.3"
+parsr-client = "*"
+jupyterlab = "*"
 ipython = "==7.9.0"
 Pygments = "==2.4.2"
-jupyterlab = "*"
 diff-match-patch = "*"
 sxsdiff = "*"
