--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -6,6 +6,12 @@
     "language": ["eng", "fra"]
   },
   "cleaner": [
+    [
+      "image-detection",
+      {
+        "ocrImages": false
+      }
+    ],
     "out-of-page-removal",
     [
       "whitespace-removal",
@@ -45,7 +51,6 @@
       }
     ],
     "link-detection",
-    "image-detection",
     [
       "words-to-line",
       {
@@ -61,27 +66,17 @@
         "tolerance": 0.25
       }
     ],
+    [
+      "table-of-contents-detection",
+      {
+        "pageKeywords": ["pagina", "page", "pag"]
+      }
+    ],
     "heading-detection",
-    "heading-detection-dt",
     "ml-heading-detection",
     "list-detection",
     "page-number-detection",
     "hierarchy-detection",
-    [
-      "table-of-contents-detection",
-      {
-        "keywords": [
-          "contents",
-          "index",
-          "table of contents",
-          "contenidos",
-          "indice",
-          "índice",
-          "tabla de contenidos"
-        ],
-        "pageKeywords": ["pagina", "page", "pag"]
-      }
-    ],
     [
       "regex-matcher",
       {
