[macos install] copyAssets after npm i

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "install:pre": "node ./scripts/preinstall",
     "test": "mocha -t 15000 -r ts-node/register test/**/**/*.spec.ts",
     "copyAssets": "node ./scripts/copyFiles",
+    "postinstall": "npm run copyAssets",
     "build:ts": "npm run copyAssets && tsc --outDir ./dist",
     "build:ts:watch": "npm run copyAssets && tsc -w --outDir ./dist",
     "install:api": "npm install --prefix  api/server",
