--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     }
   },
   "lint-staged": {
-    "!(dist|-viewer/public)/**/*.ts": "tslint"
+    "!(dist|-viewer/public)/**/*.ts, !train_model/*": "tslint"
   },
   "dependencies": {
     "@google-cloud/vision": "1.11.0",
