--- a/clients/python-client/pyproject.toml
+++ b/clients/python-client/pyproject.toml
@@ -11,6 +11,7 @@ repository = 'https://github.com/axa-group/Parsr/tree/master/clients/python-clie
 python = "^3.8"
 requests = "^2.23.0"
 pandas = "^1.0.3"
+semver = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
