Revision comparison Function + Version bump

--- a/clients/python-client/pyproject.toml
+++ b/clients/python-client/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "parsr-client"
-version = "2.0.0"
+version = "3.0.0"
 description = "Python client for Parsr - Transforms PDF, Documents and Images into Enriched Structured Data"
 authors = ["AXA Group Operations S.A."]
 readme = 'README.rst'
@@ -12,6 +12,8 @@ python = "^3.8"
 requests = "^2.23.0"
 pandas = "^1.0.3"
 semver = "^2.9.1"
+diff_match_patch = "^20181111"
+sxsdiff = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
