--- a/demo/doc-versioning/pyproject.toml
+++ b/demo/doc-versioning/pyproject.toml
@@ -9,6 +9,8 @@ repository = 'https://github.com/axa-group/Parsr/tree/develop/demo/doc-versionin
 [tool.poetry.dependencies]
 python = "^3.8"
 parsr-client = "^3.0.0"
+flask = "^1.1.2"
+pywebview = "^3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
