--- a/clients/python-client/pyproject.toml
+++ b/clients/python-client/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "parsr-client"
-version = "3.0.0"
+version = "3.1.0"
 description = "Python client for Parsr - Transforms PDF, Documents and Images into Enriched Structured Data"
 authors = ["AXA Group Operations S.A."]
-readme = 'README.rst'
+readme = 'README.md'
 homepage = 'http://par.sr'
 repository = 'https://github.com/axa-group/Parsr/tree/develop/clients/python-client'
 
