--- a/api/server/package.json
+++ b/api/server/package.json
@@ -2,6 +2,10 @@
 	"name": "parsr-api",
 	"version": "1.0.0",
 	"description": "API for Parsr",
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/axa-group/Parsr.git"
+	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"typings": "dist/index.d.ts",
