--- a/package.json
+++ b/package.json
@@ -80,7 +80,16 @@
     "@types/pino": "^5.20.0",
     "@types/string-similarity": "^3.0.0",
     "@types/xml2js": "^0.4.4",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "chai": "^4.1.2",
+    "eslint": "^7.0.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
     "husky": "^1.3.1",
     "leche": "^2.3.0",
     "lint-staged": "^10.2.2",
