--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
-	"files": ["server/bin/index.ts"],
-	"compilerOptions": {
-		"types": ["node"],
-		"lib": ["es7"],
-		"target": "es5",
-		"sourceMap": true,
-		"outDir": "dist",
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noImplicitAny": false,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"noImplicitThis": true,
-		"strictNullChecks": false,
-		"downlevelIteration": true,
-		"resolveJsonModule": true,
-		"allowJs": true,
-	}
+  "files": ["server/bin/index.ts"],
+  "compilerOptions": {
+    "types": ["node"],
+    "lib": ["es7"],
+    "target": "es5",
+    "sourceMap": true,
+    "outDir": "dist",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitAny": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitThis": true,
+    "strictNullChecks": false,
+    "downlevelIteration": true,
+    "resolveJsonModule": true,
+    "allowJs": true
+  }
 }
