--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "npm run eslint:api && npm run eslint:vue && npm run eslint:core",
     "eslint:api": "eslint api/server/src/*",
     "eslint:vue": "eslint \"demo/vue-viewer/**/*.{vue,js}\"",
-    "eslint:core": "eslint \"server/**/*.{ts,json}\"",
+    "eslint:core": "eslint \"server/**/*.{ts,json}\" \"scripts/**/*.js\" \"*.json\"",
     "start:api": "npm run build:ts && npm run install:api && npm run --prefix api/server start",
     "start:api:background": "npm run start:api&",
     "format": "prettier --write --list-different \"{,!(dist)/**/}*.{js,md,ts,css,scss}\"",
@@ -42,7 +42,7 @@
     }
   },
   "lint-staged": {
-    "!(dist|-viewer/public)/**/*.ts, !train_model/*": "eslint"
+    "*": "eslint"
   },
   "dependencies": {
     "@google-cloud/vision": "1.11.0",
