[table-detection] - updated TableDetection2Script to last version

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     "dist",
     "api/dist",
     "server/src/processing/HeadingDetectionDTModule/model.js",
-    "server/src/processing/MLHeadingDetectionModule/train_model/model.js"
+    "server/src/processing/MLHeadingDetectionModule/train_model/model.js",
+    "*.py"
   ]
 }
