--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "run:debug": "ts-node server/bin/index.ts",
     "lint": "npm run eslint:api && npm run eslint:vue && npm run eslint:core",
     "eslint:api": "eslint api/server/src/*",
-    "eslint:vue": "eslint \"demo/vue-viewer/**/*.{vue,js}\"",
+    "eslint:vue": "eslint \"demo/vue-viewer/**/*.{vue,js,json}\"",
     "eslint:core": "eslint \"server/**/*.{ts,json}\" \"scripts/**/*.js\" \"*.json\"",
     "start:api": "npm run build:ts && npm run install:api && npm run --prefix api/server start",
     "start:api:background": "npm run start:api&",
@@ -42,7 +42,7 @@
     }
   },
   "lint-staged": {
-    "*": "eslint"
+    "!(package-lock.json)*": "eslint"
   },
   "dependencies": {
     "@google-cloud/vision": "1.11.0",
