--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     }
   },
   "lint-staged": {
-    "*": "eslint"
+    "!(docker)/*": "eslint"
   },
   "dependencies": {
     "@google-cloud/vision": "1.11.0",
