[svg-lines] - test cases for drawing detection and line merge

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
     "api/dist",
     "server/src/processing/HeadingDetectionDTModule/model.js",
     "server/src/processing/MLHeadingDetectionModule/train_model/model.js",
-    "*.py"
+    "*.py",
+    "test/**/*.pdf"
   ]
 }
