--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -35,6 +35,7 @@
     [
       "table-detection",
       {
+        "checkDrawings": true,
         "runConfig": [
           {
             "pages": [],
