[table-accuracy] - added new option "includeDrawings" in output parameters

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -114,6 +114,7 @@
   "output": {
     "granularity": "word",
     "includeMarginals": false,
+    "includeDrawings": false,
     "formats": {
       "json": true,
       "text": true,
