[Headings Level] computing headings level with a keras model

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "strictNullChecks": false,
     "downlevelIteration": true,
     "resolveJsonModule": true,
-    "allowJs": true
+    "allowJs": true,
+    "skipLibCheck": true
   }
 }
