[MlHeadingDetectionModule] predicting headings level directly with the Python script

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,6 @@
     "strictNullChecks": false,
     "downlevelIteration": true,
     "resolveJsonModule": true,
-    "allowJs": true,
-    "skipLibCheck": true
+    "allowJs": true
   }
 }
