fixed bad structure

--- a/server/src/processing/KeyValueDetectionModule/defaultConfig.json
+++ b/server/src/processing/KeyValueDetectionModule/defaultConfig.json
@@ -5,7 +5,12 @@
 		"keyPatterns": {
 			"value": {}
 		},
-		"keyValueDividerChars": [":", ";"],
+		"keyValueDividerChars": {
+			"value": [
+				":",
+				";"
+			]
+		},
 		"thresholdRatio": {
 			"value": 0.2,
 			"range": {
