--- a/server/remoteModuleConfig.json
+++ b/server/remoteModuleConfig.json
@@ -1,54 +1,55 @@
 {
-	"version": 0.5,
-	"extractor": {
-		"pdf": "pdfminer",
-		"ocr": "tesseract",
-		"language": ["eng", "fra"]
-	},
-	"cleaner": [
-		"out-of-page-removal",
-		"whitespace-removal",
-		"redundancy-detection",
-		"reading-order-detection",
-		"link-detection",
-		["words-to-line", { "maximumSpaceBetweenWords": 100 }],
-		"lines-to-paragraph",
-		[
-			"remote",
-			{
-				"url": "http://localhost:8888"
-			}
-		],
-		["header-footer-detection", { "maxMarginPercentage": 15 }],
-		"hierarchy-detection",
-		[
-			"regex-matcher",
-			{
-				"queries": [
-					{
-						"label": "Car",
-						"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
-					},
-					{
-						"label": "Age",
-						"regex": "(\\d+)[ -]*(ans|jarige)"
-					},
-					{
-						"label": "Percent",
-						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|prozent)"
-					}
-				]
-			}
-		]
-	],
-	"output": {
-		"granularity": "word",
-		"includeMarginals": false,
-		"formats": {
-			"json": true,
-			"text": true,
-			"csv": true,
-			"markdown": true
-		}
-	}
+  "version": 0.5,
+  "extractor": {
+    "pdf": "pdfminer",
+    "ocr": "tesseract",
+    "language": ["eng", "fra"]
+  },
+  "cleaner": [
+    "out-of-page-removal",
+    "whitespace-removal",
+    "redundancy-detection",
+    "reading-order-detection",
+    "link-detection",
+    "words-to-line-new",
+    ["words-to-line", { "maximumSpaceBetweenWords": 100 }],
+    "lines-to-paragraph",
+    [
+      "remote",
+      {
+        "url": "http://localhost:8888"
+      }
+    ],
+    ["header-footer-detection", { "maxMarginPercentage": 15 }],
+    "hierarchy-detection",
+    [
+      "regex-matcher",
+      {
+        "queries": [
+          {
+            "label": "Car",
+            "regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
+          },
+          {
+            "label": "Age",
+            "regex": "(\\d+)[ -]*(ans|jarige)"
+          },
+          {
+            "label": "Percent",
+            "regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|prozent)"
+          }
+        ]
+      }
+    ]
+  ],
+  "output": {
+    "granularity": "word",
+    "includeMarginals": false,
+    "formats": {
+      "json": true,
+      "text": true,
+      "csv": true,
+      "markdown": true
+    }
+  }
 }
