--- a/docker/parsr-base/Dockerfile
+++ b/docker/parsr-base/Dockerfile
@@ -17,7 +17,7 @@ RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key
 RUN apt-get update && \
   apt-get install -y imagemagick mupdf mupdf-tools qpdf pandoc tesseract-ocr-all nodejs npm python-pdfminer python-pip python3-pip python-tk python3-pdfminer python3-opencv && \
   pip install PyPDF2 && \
-  pip3 install ghostscript PyPDF2 camelot-py[cv] numpy pillow sklearn
+  pip3 install ghostscript PyPDF2 camelot-py[cv] numpy pillow sklearn tabula-py
 
 WORKDIR /opt/app-root/src
 RUN chown 1001:0 /opt/app-root/src
