fix for the new behaviour in ImageMagick

--- a/.drone.yml
+++ b/.drone.yml
@@ -28,7 +28,7 @@ steps:
     image: plugins/docker
     settings:
       repo: axarev/parsr-base
-      context: .
+      context: docker/parsr-base
       dockerfile: docker/parsr-base/Dockerfile
       username:
         from_secret: registry_user
