[headerFooterFix] add a new option to define the similarity size of page

--- a/server/src/processing/HeaderFooterDetectionModule/defaultConfig.json
+++ b/server/src/processing/HeaderFooterDetectionModule/defaultConfig.json
@@ -11,6 +11,13 @@
 				"min": 0,
 				"max": 100
 			}
+		},
+		"similaritySizePercentage": {
+			"value": 10,
+			"range": {
+				"min": 0,
+				"max": 200
+			}
 		}
 	}
 }
