--- a/server/src/processing/WordsToLineNewModule/defaultConfig.json
+++ b/server/src/processing/WordsToLineNewModule/defaultConfig.json
@@ -1,6 +1,6 @@
 {
   "name": "words-to-line-new",
-  "description": "Create lines from a bunch of words, according to the reading order.",
+  "description": "Create lines from a bunch of words.",
   "specs": {
 		"modifyAvgWordsSpace": {
 			"value": 0,
